# strang

./: stack.yaml  strang-interpreter.cabal
src/: Main.hs  Strang.hs  Strang.lhs
src/Strang/: Base.hs  Command.hs  Commands.hs  Exists.hs  Functor.hs  HListFunctions.hs  Input.hs  Interpreter.hs  Iso.hs  Lists.hs  Parsers.hs  Prelude.hs  Types.hs
src/examples/: Examples.hs
