name: strang-interpreter
version: 0.0.2
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
synopsis: Interpreter
description:
    .Interpreter for a weakly- and statically-typed string-manipulation language.

executable str
    main-is: Main.hs
    build-depends:
        array -any,
        base -any,
        text -any,
        text-icu -any,
        bytestring -any,
        monadplus -any,
        mtl -any,
        containers -any,
        parsec -any,
        regex-base -any,
        regex-tdfa -any,
        safe -any,
        transformers -any,
        lens -any,
        data-default -any
    default-language: Haskell2010
    default-extensions: MultiParamTypeClasses FlexibleInstances
    other-modules:
      Strang.Command
      ,Strang.Exists
      ,Strang.Interpreter
      ,Strang.Iso
      ,Strang.Lists
      ,Strang.Parsers
      ,Strang.Prelude
    hs-source-dirs: src
    GHC-Options: -W -O
