name: strang-interpreter
version: 0.0.1
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
synopsis: Interpreter
description:
    .Interpreter for a weakly- and statically-typed string-manipulation language.

executable str
    main-is: Main.hs
    build-depends:
        array -any,
        base -any,
        text -any,
        text-icu -any,
        bytestring -any,
        either -any,
        monadplus -any,
        mtl -any,
        parsec -any,
        regex-base -any,
        regex-tdfa -any,
        safe -any,
        transformers -any,
        data-default -any,
        TypeCompose -any
    default-language: Haskell2010
    default-extensions: MultiParamTypeClasses FlexibleInstances
    hs-source-dirs: src
    GHC-Options: -W -O
